Add slick slider

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<title>NovaBoard</title>
 	<link rel="stylesheet" href="css/common.css">
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="/slick/slick.scss">
+	<link rel="stylesheet" href="/slick/slick-theme.css">
 </head>
 <body>
 	<header class="head">
@@ -29,18 +31,74 @@
 				<div class="logo">
 					<img src="css/img/logo.png" alt="">
 				</div>
-				<div class="in-social">
-					<p class="social">Мы в социальных сетях</p>
-					<img src="css/img/icon-intagram.png" alt><a href="https://instagram.com"></a></img>
-					<img src="css/img/icon-vk.png" alt><a href="https://vk.com"></a></img>
-				</div>
-				<div class="contacts">
-					<a href="tel:+38(0552)314-410, 314-403">+38(0552)314-410, 314-403;</a>
-					<a href="tel:+38(0552)359-214">факс:+38(0552)359-214</a>
-					<a href="maito:info@penoboard.com">e-mail:info@penoboard.com</a>
+				<div class="block-contacts">
+					<div class="in-social">
+						<p class="social">Мы в социальных сетях</p>
+						<img src="css/img/icon-intagram.png" alt><a href="https://instagram.com"></a></img>
+						<img src="css/img/icon-vk.png" alt><a href="https://vk.com"></a></img>
+					</div>
+					<div class="contacts">
+						<a href="tel:+38(0552)314-410, 314-403">+38(0552)314-410, 314-403;</a>
+						<a href="tel:+38(0552)359-214">факс:+38(0552)359-214</a>
+						<a href="maito:info@penoboard.com">e-mail:info@penoboard.com</a>
+					</div>
+					<div class="fildsearch">
+						<input type="search">
+						<button type="submit"><img src="/css/img/icon-search.png" alt></button>
+					</div>
 				</div>
 			</header>
+			<section class="slider-block">
+				<div class="slider">
+						<div>
+							<img class="slide-img" src="css/img/slide1.jpg" alt="">
+							<div class="slide-txt">
+								<h3>сегодня инновация -</h3>
+								<p>завтра необхадимость</p>
+								<p>энергосбережение нового поколения</p>
+							</div>
+						</div>
+						<div>
+							<img class="slide-img" src="css/img/slide2.jpg" alt="">
+							<div class="slide-txt">
+								<h3>сегодня инновация -</h3>
+								<p>завтра необхадимость</p>
+								<p>энергосбережение нового поколения</p>
+							</div>
+						</div>
+						<div>
+							<img class="slide-img" src="css/img/slide1.jpg" alt="">
+							<div class="slide-txt">
+								<h3>сегодня инновация -</h3>
+								<p>завтра необхадимость</p>
+								<p>энергосбережение нового поколения</p>
+							</div>
+						</div>
+						<div>
+							<img class="slide-img" src="css/img/slide2.jpg" alt="">
+							<div class="slide-txt">
+								<h3>сегодня инновация -</h3>
+								<p>завтра необхадимость</p>
+								<p>энергосбережение нового поколения</p>
+							</div>
+						</div>
+						<div>
+							<img class="slide-img" src="css/img/slide1.jpg" alt="">
+							<div class="slide-txt">
+								<h3>сегодня инновация -</h3>
+								<p>завтра необхадимость</p>
+								<p>энергосбережение нового поколения</p>
+							</div>
+						</div>
+				</div>
+				<div class="shadow">
+					<img src="/css/img/shadow.png" alt="shadow">
+				</div>
+			</section>
 		</div>
 	</section>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script type="text/javascript" src="slick/slick.min.js"></script>
+	<script type="text/javascript" src="/js/main.js"></script>
 </body>
 </html>
