--- a/index.html
+++ b/index.html
@@ -97,6 +97,24 @@
 			</section>
 		</div>
 	</section>
+	<section class="second-block">
+		<div class="center">
+			<div class="second-logo">
+				<img class="logo" src="/css/img/fav.png" alt>
+				<h3 class="txt-nova">nova</h3>
+				<h3 class="txt-board">board</h3>
+			</div>
+			<div class="header-frame">
+				<h3 class="txt-blockframe">Экструдированный  пенополистирол</h3>
+			</div>
+			<div class="penosterol">
+				<img src="/css/img/penopolistirol.png" alt="">
+			</div>
+			<div class="youtube">
+				<iframe width="574" height="318" src="https://www.youtube.com/embed/nM-fsCabIPc" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			</div>
+		</div>
+	</section>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script type="text/javascript" src="slick/slick.min.js"></script>
 	<script type="text/javascript" src="/js/main.js"></script>
