--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 				<div class="block-contacts">
 					<div class="in-social">
 						<p class="social">Мы в социальных сетях</p>
-						<img src="css/img/icon-intagram.png" alt><a href="https://instagram.com"></a></img>
-						<img src="css/img/icon-vk.png" alt><a href="https://vk.com"></a></img>
+						<a href="https://instagram.com" target="_blank"><img src="css/img/icon-intagram.png" alt></a>
+						<a href="https://vk.com" target="_blank"><img src="css/img/icon-vk.png" alt></a>
 					</div>
 					<div class="contacts">
 						<a href="tel:+38(0552)314-410, 314-403">+38(0552)314-410, 314-403;</a>
