--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 						<a href="https://vk.com" target="_blank"><img src="css/img/icon-vk.png" alt></a>
 					</div>
 					<div class="contacts">
-						<a href="tel:+38(0552)314-410, 314-403">+38(0552)314-410, 314-403;</a>
-						<a href="tel:+38(0552)359-214">факс:+38(0552)359-214</a>
-						<a href="maito:info@penoboard.com">e-mail:info@penoboard.com</a>
+						<a class="phone" href="tel:+38(0552)314-410, 314-403">+38(0552)314-410, 314-403;</a><!--
+					 --><a class="phone" href="tel:+38(0552)359-214">факс:+38(0552)359-214</a>
+						<a class="mail" href="mailto:info@penoboard.com">e-mail:info@penoboard.com</a>
 					</div>
 					<div class="fildsearch">
 						<input type="search">
@@ -100,7 +100,7 @@
 	<section class="second-block">
 		<div class="center">
 			<div class="second-logo">
-				<img class="logo" src="/css/img/fav.png" alt>
+				<img class="logo2" src="/css/img/fav.png" alt>
 				<h3 class="txt-nova">nova</h3>
 				<h3 class="txt-board">board</h3>
 			</div>
@@ -111,7 +111,449 @@
 				<img src="/css/img/penopolistirol.png" alt="">
 			</div>
 			<div class="youtube">
-				<iframe width="574" height="318" src="https://www.youtube.com/embed/nM-fsCabIPc" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				<div class="youtube-frame">
+					<iframe width="574" height="318" src="https://www.youtube.com/embed/nM-fsCabIPc" frameborder="0"
+					allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				</div>
+				<div class="youtube-shadow">
+					<img src="/css/img/Shadow 02 copy.png" alt="">
+				</div>
+			</div>
+			<div class="info-block">
+				<p class="info-text">
+					Многолетний опыт применения экструдированного пенополистирола в различных отраслях строительства
+					доказывает <br>высокую эффективность его использования. Наша компания производит экструдированный
+					пенополистирол на <br>высококачественном европейском оборудовании, соблюдая мировые стандарты качества.
+				</p>
+				<p class="info-text">
+					Торговая марка <b>NOVABOARD</b> много лет на украинском рынке и за это время мы не только вышли на лидирующие
+					позиции, <br>но и доказали, что NOVABOARD– это гарантия качества, проверенная временем. Наш бренд - это наша
+					репутация. <br>Мы завоевываем ее, легко справляясь с любыми задачами. Это понимают наши партнеры в <br>процессе
+					взаимодействия с нами.
+				</p>
+			</div>
+			<div class="button">
+				<button class="know-button"><a class="link" href="#">узнать подробнее</a></button>
+			</div>
+		</div>
+	</section>
+	<section class="third-block">
+		<div class="new-center">
+			<div class="third-head">
+				<h3 class="head-txt">
+					сфера применения
+				</h3>
+			</div>
+			<div class="picture-block">
+				<div class="leftwin">
+					<div class="picture-left">
+						<img class="left-pic" src="/css/img/left.png" alt="">
+					</div>
+					<div class="leftwin-txt">
+						<p class="left-head">гражданское строительство</p>
+					</div>
+					<div class="left-body-one">
+						<p class="body-txt-one">жилые дома</p>
+					<div style="
+						position: absolute;
+						height: 18px;
+						width: 47px;
+						background: #01983b;
+						top: 0;
+						right: 190px;
+						opacity: .45;
+					"></div>
+					<div style="
+						position: absolute;
+						height: 18px;
+						width: 47px;
+						background: #01983b;
+						top: 0;
+						right: 237px;
+						opacity: .2;
+					"
+					></div>
+					</div>
+					<div class="left-body-two">
+						<p class="body-txt-two">офисные здания</p>
+						<div style="
+						position: absolute;
+						height: 18px;
+						width: 47px;
+						background: #01983b;
+						top: 0;
+						right: 241px;
+						opacity: .45;
+						"></div>
+						<div style="
+						position: absolute;
+						height: 18px;
+						width: 47px;
+						background: #01983b;
+						top: 0;
+						right: 288px;
+						opacity: .2;
+						"></div>
+					</div>
+					<div class="left-body-third">
+						<p class="body-txt-third">торгово - равлекательные комплексы</p>
+						<div style="
+						position: absolute;
+						height: 18px;
+						width: 47px;
+						background: #01983b;
+						top: 0;
+						right: 448px;
+						opacity: .45;"></div>
+						<div style="
+						position: absolute;
+						height: 18px;
+						width: 47px;
+						background: #01983b;
+						top: 0;
+						right: 495px;
+						opacity: .2;"></div>
+					</div>
+					<div class="bottom-logo">
+						<img class="white-logo" src="/css/img/white-logo.png" alt="">
+						<div class="white-shadow"></div>
+					</div>
+				</div>
+				<div class="rightwin">
+					<div class="picture-right">
+						<img class="left-pic" src="/css/img/right.png" alt="">
+					</div>
+					<div class="rightwin-txt">
+						<p class="right-head">промышленное строительство</p>
+					</div>
+					<div class="right-body-one">
+						<p class="right-txt-one">спортивные сооружения - ледовые арены</p>
+					<div style="
+						position: absolute;
+						height: 18px;
+						width: 47px;
+						background: #01983b;
+						top: 0;
+						left: 473px;
+						opacity: .45;
+					"></div>
+					<div style="
+						position: absolute;
+						height: 18px;
+						width: 47px;
+						background: #01983b;
+						top: 0;
+						left: 520px;
+						opacity: .2;
+					"
+					></div>
+					</div>
+					<div class="right-body-two">
+						<p class="right-txt-two">ангары и склады</p>
+						<div style="
+						position: absolute;
+						height: 18px;
+						width: 47px;
+						background: #01983b;
+						top: 0;
+						left: 244px;
+						opacity: .45;
+						"></div>
+						<div style="
+						position: absolute;
+						height: 18px;
+						width: 47px;
+						background: #01983b;
+						top: 0;
+						left: 291px;
+						opacity: .2;
+						"></div>
+					</div>
+					<div class="right-body-third">
+						<p class="right-txt-third">заводы и фабрики</p>
+						<div style="
+						position: absolute;
+						height: 18px;
+						width: 47px;
+						background: #01983b;
+						top: 0;
+						left: 273px;
+						opacity: .45;"></div>
+						<div style="
+						position: absolute;
+						height: 18px;
+						width: 47px;
+						background: #01983b;
+						top: 0;
+						left: 320px;
+						opacity: .2;"></div>
+					</div>
+					<div class="bottom-logo">
+						<img class="white-logo2" src="/css/img/white-logo.png" alt="">
+						<div class="white-shadow2"></div>
+					</div>
+				</div>
+			</div>
+			<div class="mini-blocks">
+				<div class="presentation">
+					<img src="/css/img/bg-mini.png" alt="" class="ground">
+					<img src="/css/img/balcony.png" alt="" class="pres-pic-one">
+					<p class="pres-text">
+						балконы и <br>лоджи
+					</p>
+				</div>
+				<div class="presentation-down">
+					<img src="/css/img/bg-mini.png" alt="" class="ground">
+					<img src="/css/img/wall.png" alt="" class="pres-pic-two">
+					<p class="pres-text">
+						стены и <br>фасады
+					</p>
+				</div>
+				<div class="presentation">
+					<img src="/css/img/bg-mini.png" alt="" class="ground">
+					<img src="/css/img/base.png" alt="" class="pres-pic-three">
+					<p class="pres-text">
+						периметр дома <br>и цоколь
+					</p>
+				</div>
+				<div class="presentation-down">
+					<img src="/css/img/bg-mini.png" alt="" class="ground">
+					<img src="/css/img/roof.png" alt="" class="pres-pic-four">
+					<p class="pres-text">
+						плоская и <br>скатная кровля
+					</p>
+				</div>
+				<div class="presentation">
+					<img src="/css/img/bg-mini.png" alt="" class="ground">
+					<img src="/css/img/foundation.png" alt="" class="pres-pic-five">
+					<p class="pres-text">
+						фундамент и <br>мостики холода
+					</p>
+				</div>
+				<div class="presentation-down">
+					<img src="/css/img/bg-mini.png" alt="" class="ground">
+					<img src="/css/img/floorpng.png" alt="" class="pres-pic-six">
+					<p class="pres-text">
+						полы и <br>потолки
+					</p>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="four-block">
+		<div class="new-center">
+			<div class="background">
+				<div class="square-shadow"></div>
+			</div>
+			<div class="logotype-four">
+				<img src="/css/img/fav.png" alt="" class="logo4">
+				<h3 class="txt-nova-two">nova</h3>
+				<h3 class="txt-board-two">board</h3>
+			</div>
+			<div class="head-four">
+				<h3 class="head-four-txt">технические характеристики</h3>
+			</div>
+			<div class="center">
+				<table class="specifications">
+					<tr class="row">
+						<td class="cell">ТЕХНИЧЕСКИЕ ХАРАКТЕРИСТИКИ</td>
+						<td class="cell">НОРМАТИВ</td>
+						<td class="cell">ПСБ - 20</td>
+						<td class="cell">ПСБ- 30</td>
+						<td class="cell">ПСБ- 40</td>
+						<td class="cell">ПСБ- 50</td>
+						<td class="cell">ПСБ- 60-120</td>
+					</tr>
+					<tr class="row">
+						<td class="cell">Плотность кг/м3</td>
+						<td class="cell">ГОСТ15588-86</td>
+						<td class="cell">30-32</td>
+						<td class="cell">30-32</td>
+						<td class="cell">30-32</td>
+						<td class="cell">30-32</td>
+						<td class="cell">30-32</td>
+					</tr>
+					<tr class="row">
+						<td class="cell">Теплопроводность при 25°С (λ25) Вт/мК </td>
+						<td class="cell">ГОСТ 7076-99</td>
+						<td class="cell">0,03</td>
+						<td class="cell">0,03</td>
+						<td class="cell">0,03</td>
+						<td class="cell">0,03</td>
+						<td class="cell">0,03</td>
+					</tr>
+					<tr class="row">
+						<td class="cell">Теплопроводность (λA) Вт/мК </td>
+						<td class="cell">ГОСТ 7076-99</td>
+						<td class="cell">0,031</td>
+						<td class="cell">0,031</td>
+						<td class="cell">0,031</td>
+						<td class="cell">0,031</td>
+						<td class="cell">0,031</td>
+					</tr>
+					<tr class="row">
+						<td class="cell">Теплопроводность (λБ) Вт/мК</td>
+						<td class="cell">ГОСТ 7076-99</td>
+						<td class="cell">0,032</td>
+						<td class="cell">0,032</td>
+						<td class="cell">0,032</td>
+						<td class="cell">0,032</td>
+						<td class="cell">0,032</td>
+					</tr>
+					<tr class="row">
+						<td class="cell">Прочность на сжатие при 10% деформации, МПа</td>
+						<td class="cell">ГОСТ 15588-86</td>
+						<td class="cell">0,2</td>
+						<td class="cell">0,25</td>
+						<td class="cell">0,41</td>
+						<td class="cell">0,5</td>
+						<td class="cell">0,6</td>
+					</tr>
+					<tr class="row">
+						<td class="cell">Предел прочности при изгибе, МПа </td>
+						<td class="cell">ГОСТ 15588-86</td>
+						<td class="cell">0,25</td>
+						<td class="cell">0,4</td>
+						<td class="cell">0,4</td>
+						<td class="cell">0,4-0,7</td>
+						<td class="cell">0,4-0,7</td>
+					</tr>
+					<tr class="row">
+						<td class="cell">Модуль упругости, МПА </td>
+						<td class="cell"></td>
+						<td class="cell">15</td>
+						<td class="cell">15</td>
+						<td class="cell">18</td>
+						<td class="cell">18</td>
+						<td class="cell">18</td>
+					</tr>
+					<tr class="row">
+						<td class="cell">Водопоглощение за 24 часа, % по объему </td>
+						<td class="cell">ГОСТ 15588-86</td>
+						<td class="cell">0,4</td>
+						<td class="cell">0,4</td>
+						<td class="cell">0,4</td>
+						<td class="cell">0,4</td>
+						<td class="cell">0,4</td>
+					</tr>
+					<tr class="row">
+						<td class="cell">Паропроницаемость (μ) мг/м·ч·Па </td>
+						<td class="cell">ГОСТ 25898-83</td>
+						<td class="cell">0,008</td>
+						<td class="cell">0,007</td>
+						<td class="cell">0,007</td>
+						<td class="cell">0,007</td>
+						<td class="cell">0,008</td>
+					</tr>
+					<tr class="row">
+						<td class="cell">Капилярное увлажнение</td>
+						<td class="cell"></td>
+						<td class="cell">0</td>
+						<td class="cell">0</td>
+						<td class="cell">0</td>
+						<td class="cell">0</td>
+						<td class="cell">0</td>
+					</tr>
+					<tr class="row">
+						<td class="cell">Коэфициент линейного теплового расширения</td>
+						<td class="cell"></td>
+						<td class="cell">7x10-5</td>
+						<td class="cell">7x10-5</td>
+						<td class="cell">7x10-5</td>
+						<td class="cell">7x10-5</td>
+						<td class="cell">7x10-5</td>
+					</tr>
+					<tr class="row">
+						<td class="cell">Пожарные характеристики</td>
+						<td class="cell">ГОСТ 30244-94</td>
+						<td class="cell">Г1</td>
+						<td class="cell">Г1</td>
+						<td class="cell">Г1</td>
+						<td class="cell">Г1</td>
+						<td class="cell">Г1</td>
+					</tr>
+					<tr class="row">
+						<td class="cell">Температура применения, °С</td>
+						<td class="cell"></td>
+						<td class="cell">-50...+75</td>
+						<td class="cell">-50...+75</td>
+						<td class="cell">-50...+75</td>
+						<td class="cell">-50...+75</td>
+						<td class="cell">-50...+75</td>
+					</tr>
+				</table>
+			</div>
+		</div>
+		<div class="peno-block">
+			<img src="/css/img/penopolistirol.png" alt="" style="height: 301px;">
+		</div>
+	</section>
+	<section class="five-block">
+		<div class="new-center">
+			<div class="five-header">
+				<h3 class="five-head">какие задачи решает?</h3>
+			</div>
+			<div class="tasks">
+				<div class="tasks-line__one">
+					<div class="left-tasks">
+						<img src="/css/img/sad-smile.png" alt="" class="sad-smile">
+						<p class="sad-txt">Потери тепла</p>
+					</div>
+					<div class="right-tasks">
+						<img src="/css/img/smile.png" alt="" class="smile">
+						<p class="smile-txt">Высокая теплоизоляция, эффективность в суровых погодных условиях.</p>
+					</div>
+				</div>
+				<div class="tasks-line__two">
+					<div class="left-tasks">
+						<img src="/css/img/sad-smile.png" alt="" class="sad-smile">
+						<p class="sad-txt">Проникновение шума</p>
+					</div>
+					<div class="right-tasks">
+						<img src="/css/img/smile.png" alt="" class="smile">
+						<p class="smile-txt">Индекс снижения приведенного уровня ударного шума — 25 Дб.</p>
+					</div>
+				</div>
+				<div class="tasks-line__three">
+					<div class="left-tasks">
+						<img src="/css/img/sad-smile.png" alt="" class="sad-smile">
+						<p class="sad-txt">Грибок, сырость</p>
+					</div>
+					<div class="right-tasks">
+						<img src="/css/img/smile.png" alt="" class="smile">
+						<p class="smile-txt">Гидроизоляционные свойства. Низкое влагопоглощение – 0,1%</p>
+					</div>
+				</div>
+				<div class="tasks-line__four">
+					<div class="left-tasks">
+						<img src="/css/img/sad-smile.png" alt="" class="sad-smile">
+						<p class="sad-txt">Выделение вредных веществ</p>
+					</div>
+					<div class="right-tasks">
+						<img src="/css/img/smile.png" alt="" class="smile">
+						<p class="smile-txt">Благодаря радикальной полимеризации стирола PENOBOARD не токсичен, биологически нейтрален, отвечает высоким экологическим стандартам.</p>
+					</div>
+				</div>
+				<div class="tasks-line__five">
+					<div class="left-tasks">
+						<img src="/css/img/sad-smile.png" alt="" class="sad-smile">
+						<p class="sad-txt">Расточительность</p>
+					</div>
+					<div class="right-tasks">
+						<img src="/css/img/smile.png" alt="" class="smile">
+						<P class="smile-txt">В масштабах государства – снижение энергоемкости производства и экономия традиционных ресурсов, в масштабах каждого отдельного дома – сбережение тепла и экологии помещений, снижение трат на отоплении.</P>
+					</div>
+				</div>
+				<div class="tasks-line__six">
+					<div class="left-tasks">
+						<img src="/css/img/sad-smile.png" alt="" class="sad-smile">					
+						<p class="sad-txt">Пожароопасность</p>
+					</div>
+					<div class="right-tasks">
+						<img src="/css/img/smile.png" alt="" class="smile">
+						<p class="smile-txt">Пожаробезопасность – Г1. PENOBOARD не поддерживает горение после прекращения контакта с открытым огнем.</p>
+					</div>
+				</div>
 			</div>
 		</div>
 	</section>
