--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<title>NovaBoard</title>
-	<link rel="stylesheet" href="css/common.css">
-	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="/slick/slick.scss">
 	<link rel="stylesheet" href="/slick/slick-theme.css">
+	<link rel="stylesheet" href="/css/plugins/css/fresco/fresco.css">
+	<link rel="stylesheet" href="css/common.css">
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 	<header class="head">
@@ -34,8 +35,8 @@
 				<div class="block-contacts">
 					<div class="in-social">
 						<p class="social">Мы в социальных сетях</p>
-						<a href="https://instagram.com" target="_blank"><img src="css/img/icon-intagram.png" alt></a>
-						<a href="https://vk.com" target="_blank"><img src="css/img/icon-vk.png" alt></a>
+						<a href="https://instagram.com" target="_blank"><img src="css/img/icon-intagram.png" alt class="inst"</a>
+						<a href="https://vk.com" target="_blank"><img src="css/img/icon-vk.png" alt class="vk"></a>
 					</div>
 					<div class="contacts">
 						<a class="phone" href="tel:+38(0552)314-410, 314-403">+38(0552)314-410, 314-403;</a><!--
@@ -50,42 +51,42 @@
 			</header>
 			<section class="slider-block">
 				<div class="slider">
-						<div>
+						<div class="slide-pic">
 							<img class="slide-img" src="css/img/slide1.jpg" alt="">
 							<div class="slide-txt">
-								<h3>сегодня инновация -</h3>
+								<p>сегодня инновация -</p>
 								<p>завтра необхадимость</p>
 								<p>энергосбережение нового поколения</p>
 							</div>
 						</div>
-						<div>
+						<div  class="slide-pic">
 							<img class="slide-img" src="css/img/slide2.jpg" alt="">
 							<div class="slide-txt">
-								<h3>сегодня инновация -</h3>
+								<p>сегодня инновация -</p>
 								<p>завтра необхадимость</p>
 								<p>энергосбережение нового поколения</p>
 							</div>
 						</div>
-						<div>
+						<div  class="slide-pic">
 							<img class="slide-img" src="css/img/slide1.jpg" alt="">
 							<div class="slide-txt">
-								<h3>сегодня инновация -</h3>
+								<p>сегодня инновация -</p>
 								<p>завтра необхадимость</p>
 								<p>энергосбережение нового поколения</p>
 							</div>
 						</div>
-						<div>
+						<div  class="slide-pic">
 							<img class="slide-img" src="css/img/slide2.jpg" alt="">
 							<div class="slide-txt">
-								<h3>сегодня инновация -</h3>
+								<p>сегодня инновация -</p>
 								<p>завтра необхадимость</p>
 								<p>энергосбережение нового поколения</p>
 							</div>
 						</div>
-						<div>
+						<div class="slide-pic">
 							<img class="slide-img" src="css/img/slide1.jpg" alt="">
 							<div class="slide-txt">
-								<h3>сегодня инновация -</h3>
+								<p>сегодня инновация -</p>
 								<p>завтра необхадимость</p>
 								<p>энергосбережение нового поколения</p>
 							</div>
@@ -554,11 +555,71 @@
 						<p class="smile-txt">Пожаробезопасность – Г1. PENOBOARD не поддерживает горение после прекращения контакта с открытым огнем.</p>
 					</div>
 				</div>
+				<div class="tasks-background1"><img src="/css/img/dot-five-left.png" alt=""></div>
+				<div class="tasks-background2"><img src="/css/img/dot-five-right.png" alt=""></div>
 			</div>
 		</div>
 	</section>
+	<section class="certificates">
+		<div class="new-center">
+			<div class="logo-six">
+				<img src="/css/img/novaboard.png" alt="">
+				<div class="header-six">
+					<h3 class="sertificate-header">сертификаты качества и премии</h3>
+				</div>
+			</div>
+		</div>
+		<div class="certificates-img">
+			<a href="/css/img/sertificate-1.jpg"class="fresco" data-fresco-group="unique_name">
+				<img src="/css/img/thumb/small_setificate-1.jpg" alt="">
+			</a>
+			<a href="/css/img/sertificate-2.jpg"class="fresco" data-fresco-group="unique_name">
+				<img src="/css/img/thumb/small_setificate-2.jpg" alt="">
+			</a>
+			<a href="/css/img/sertificate-3.jpg"class="fresco" data-fresco-group="unique_name">
+				<img src="/css/img/thumb/small_setificate-3.jpg" alt="">
+			</a>
+			<a href="/css/img/sertificate-4.jpg"class="fresco" data-fresco-group="unique_name">
+				<img src="/css/img/thumb/small_setificate-4.jpg" alt="">
+			</a>
+			<a href="/css/img/sertificate-5.jpg"class="fresco" data-fresco-group="unique_name">
+				<img src="/css/img/thumb/small_setificate-5.jpg" alt="">
+			</a>
+		</div>
+		<div class="sertificate-footer">
+			<h3 class="sert-foot-txt">премия:</h3>
+			<h3 class="sert-foot-txt">100 лутших товаров Украины 2010 и 2011</h3>
+			<img src="/css/img/premium.png" alt="">
+		</div>
+	</section>
+	<section class="contact">
+		<div class="new-center">
+			<div class="container-contact">
+				<h3 class="contact-txt">контакты</h3>
+				<p class="contact-header">ООО «Производственно коммерческая фирма «Элит Пласт»</p>
+				<p class="contact-adress">73000, Украина, г. Херсон, ул Советская, 41-А</p>
+				<p class="contact-phone">тел:+38(0552)123-456, 789-403; факс:+38(0552)123-214</p>
+				<a id="mail" class="mail" href="mailto:info@penoboard.com">e-mail:info@penoboard.com</a>
+			</div>
+		</div>
+		<div class="google">
+				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d25325.829819301347!2d32.59940296975013!3d46.625695418729336!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40c41ab70369e147%3A0x7c1b1c535f39d7be!2z0JDQs9C10L3RgtGB0YLQstC-INGB0LjRgdGC0LXQvNC90LjRhSDRltC90YLQtdGA0L3QtdGCLdGA0ZbRiNC10L3RjCBXZXpvbQ!5e0!3m2!1suk!2sua!4v1557235019157!5m2!1suk!2sua" width="100%" height="340" frameborder="0" style="border:0" allowfullscreen></iframe>
+		</div>
+	</section>
+	<footer>
+		<div class="footer-logo">
+				<a href="/index.html"><img src="/css/img/logo-white.png" alt=""></a><br>
+				<img src="/css/img/white-novaboard.png" alt="">
+				<p>2015 &copy;</p>
+				<p>мы в социальных сетях</p>
+				<a href="https://instagram.com"><img class="footer-inst" src="/css/img/white-inst.png" alt=""></a>
+				<a href="https://vk.com"><img class="footer-vk" src="/css/img/white-vk.png" alt=""></a>
+				<a href="https://wezom.com.ua/"><p>разработка сайта - студия wezom</p></a>
+		</div>
+	</footer>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script type="text/javascript" src="slick/slick.min.js"></script>
+	<script type="text/javascript" src="/css/plugins/js/fresco/fresco.js"></script>
 	<script type="text/javascript" src="/js/main.js"></script>
 </body>
 </html>
