--- a/index.html
+++ b/index.html
@@ -3,25 +3,25 @@
 <head>
 	<meta charset="UTF-8">
 	<title>NovaBoard</title>
-	<link rel="stylesheet" href="/slick/slick.scss">
+	<link rel="stylesheet" href="/slick/slick.css">
 	<link rel="stylesheet" href="/slick/slick-theme.css">
 	<link rel="stylesheet" href="/css/plugins/css/fresco/fresco.css">
-	<link rel="stylesheet" href="css/common.css">
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="/css/common.css">
+	<link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
 	<header class="head">
 		<section class="width-nav">
 			<nav class="navigator">
 				<ul class="list-nav">
-					<li><a href="#" class="list">Главная</a></li>
-					<li><a href="#"  class="list">О компании</a></li>
-					<li><a href="#" class="list">Вакансии</a></li>
-					<li><a href="#" class="list">Продукция</a></li>
-					<li><a href="#" class="list">Фотогалерея</a></li>
-					<li><a href="#" class="list">Новости</a></li>
-					<li><a href="#" class="list">Статьи</a></li>
-					<li><a href="#" class="list">Контакты</a></li>
+					<li><a href="#" class="list is-active">Главная</a></li>
+					<li><a href="#"  class="list is-active">О компании</a></li>
+					<li><a href="#" class="list is-active">Вакансии</a></li>
+					<li><a href="#" class="list is-active">Продукция</a></li>
+					<li><a href="#" class="list is-active">Фотогалерея</a></li>
+					<li><a href="#" class="list is-active">Новости</a></li>
+					<li><a href="#" class="list is-active">Статьи</a></li>
+					<li><a href="#" class="list is-active">Контакты</a></li>
 				</ul>
 			</nav>
 		</section>
@@ -41,13 +41,13 @@
 						<a href="https://vk.com" target="_blank"><img src="css/img/icon-vk.png" alt class="vk"></a>
 					</div>
 					<div class="contacts">
-						<a class="phone" href="tel:+38(0552)314-410, 314-403">тел:+38(0552)314-410, 314-403;</a>
-						<a class="phone" href="tel:+38(0552)359-214">факс:+38(0552)359-214</a>
+						<a class="phone" href="tel:+380552314410, 314403">тел:+38(0552)314-410, 314-403;</a>
+						<a class="phone" href="tel:+380552359214">факс:+38(0552)359-214</a>
 						<a class="mail" href="mailto:info@penoboard.com">e-mail:info@penoboard.com</a>
 					</div>
 					<form class="fildsearch">
 						<input type="search" name="search">
-						<button type="submit"><img src="/css/img/icon-search.png" alt></button>
+						<button type="submit" class="btn-submit"></button>
 					</form>
 				</div>
 			</header>
@@ -469,7 +469,7 @@
 			</div>
 			<div class="sertificate-footer">
 				<h3 class="sert-foot-txt">премия:</h3>
-				<h3 class="sert-foot-txt">100 лутших товаров Украины 2010 и 2011</h3>
+				<h3 class="sert-foot-txt">100 лучших товаров Украины 2010 и 2011</h3>
 				<img src="/css/img/premium.png" alt="">
 			</div>
 		</div>
@@ -480,8 +480,11 @@
 				<p class="contact-txt">контакты</p>
 				<p class="contact-header">ООО «Производственно коммерческая фирма «Элит Пласт»</p>
 				<p class="contact-adress">73000, Украина, г. Херсон, ул Советская, 41-А</p>
-				<p class="contact-phone">тел:+38(0552)123-456, 789-403; факс:+38(0552)123-214</p>
-				<a id="mail" class="mail" href="mailto:info@penoboard.com">e-mail:info@penoboard.com</a>
+				<p class="footer-contacts">
+					<a href="tel:+380552123456, 789-403" class="footer-phone__active">тел:+38(0552)123-456, 789-403;</a>
+					<a href="tel:+380552123214" class="footer-phone__active">факс:+38(0552)123-214</a>
+				</p>
+				<a class="footer-mail__active" href="mailto:info@penoboard.com">e-mail:info@penoboard.com</a>
 			</div>
 		</div>
 		<div class="google">
